# analysis-project-root

./: .gitignore  Pipfile  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  version-check.yml
src/analysis_project_root/: __init__.py  _version.py  pathmagic.py
tests/: test_reroot.py
